--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "prebuild": "node scripts/generate-thumbnails.mjs",
-    "build": "next build",
+    "build": "node scripts/clean-vercel.mjs && next build",
     "start": "next start",
     "lint": "eslint"
   },
